--- a/src/vigilo/themes/templates/vigiadmin/collect.html
+++ b/src/vigilo/themes/templates/vigiadmin/collect.html
@@ -31,7 +31,7 @@
     <label for="service">Service:</label>
     <input type="text" id="service" name="service" class="text" value="${servicename}"></input><br/>
 
-    <input type="submit" id="submit" value="${l_('Collect!')}" />
+    <input type="submit" id="submit" value="${_('Collect!')}" />
 </form>
 </div>
 
