--- a/src/vigilo/themes/templates/vigiadmin/profile.html
+++ b/src/vigilo/themes/templates/vigiadmin/profile.html
@@ -26,7 +26,7 @@
     <label for="new_password2">Confirmation:</label>
     <input type="password" id="new_password2" name="new_password2" class="text"></input><br/>
 
-    <input type="submit" id="submit" value="${l_('Apply')}" />
+    <input type="submit" id="submit" value="${_('Apply')}" />
 </form>
 </div>
 </body>
