--- a/src/vigilo/themes/templates/vigiboard/plugins/hls.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/hls.html
@@ -29,7 +29,7 @@
     window.addEvent('domready', function () {
         window.hls_dialog = new Jx.Dialog({
             id: "hls_dialog",
-            label: "${l_('Impacted high-level services').encode('backslash')}",
+            label: "${_('Impacted high-level services').encode('backslash')}",
             modal: false,
             resize: false,
             move: true,
