--- a/src/vigilo/themes/templates/vigiboard/plugins/occurrences.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/occurrences.html
@@ -3,7 +3,7 @@
       py:strip="">
 
 <th id="plugin_${name}" class="plugin_${name}" py:def="occurrences_header(name, instance, sort, order)" title="Occurrences count">
-    ${generic_plugin_header(name, name, l_('#'), l_('Occurrences count'))}
+    ${generic_plugin_header(name, name, _('#'), _('Occurrences count'))}
 </th>
 
 <py:def function="occurrences_data(name, instance, data, plugin_data)">
