--- a/src/vigilo/themes/templates/vigiboard/plugins/priority.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/priority.html
@@ -3,7 +3,7 @@
       py:strip="">
 
 <th id="plugin_${name}" class="plugin_${name}" py:def="priority_header(name, instance, sort, order)" title="ITIL Priority">
-    ${generic_plugin_header(name, name, l_('Priority'), l_('Priority'))}
+    ${generic_plugin_header(name, name, _('Priority'), _('Priority'))}
 </th>
 
 <py:def function="priority_data(name, instance, data, plugin_data)">
