--- a/src/vigilo/themes/templates/vigiboard/silence_form.html
+++ b/src/vigilo/themes/templates/vigiboard/silence_form.html
@@ -45,7 +45,7 @@
                 <div class="calendar_field">
                         <label for="end">End</label>
                         ${end_calendar()}
-                        <input type="button" id="duration_trigger" class="date_field_button" value="${l_('Choose a duration')}" />
+                        <input type="button" id="duration_trigger" class="date_field_button" value="${_('Choose a duration')}" />
                 </div>
                 -->
                 <div class="form_row" id="service_states">
@@ -69,7 +69,7 @@
                     <textarea id="comment" name="comment" class="input">${comment}</textarea>
                 </div>
                 <div class="form_row">
-                    <input type="submit" id="submit" value="${l_('Save')}" />
+                    <input type="submit" id="submit" value="${_('Save')}" />
                 </div>
             </form>
     </div>
