--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -119,10 +119,10 @@
                     pour contourner le problème.
                 -->
                 <input type="text" name="dummy" style="display: none"/>
-                <input type="submit" id="search_form_search" value="${l_('Search')}" />
-                <img alt="${l_('Warning')}"
+                <input type="submit" id="search_form_search" value="${_('Search')}" />
+                <img alt="${_('Warning')}"
                     src="${tg.url('/images/messagebox_warning.png')}"
-                    title="${l_('Your search returned more than 100 results. '
+                    title="${_('Your search returned more than 100 results. '
                                 'Only the first 100 entries are displayed.')}"/>
                 <div><p>Results:</p></div>
                 <div id="search_results"></div>
