--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -13,17 +13,17 @@
 <head>
     <py:choose>
         <title py:when="hostname and servicename">
-            ${"VigiBoard - "}${l_('Events table for service "%(servicename)s" on "%(hostname)s"') % {
+            ${"VigiBoard - "}${_('Events table for service "%(servicename)s" on "%(hostname)s"') % {
                 'hostname': hostname,
                 'servicename': servicename,
             }}
         </title>
         <title py:when="hostname">
-            ${"VigiBoard - "}${l_('Events table for host "%s"') % hostname}
+            ${"VigiBoard - "}${_('Events table for host "%s"') % hostname}
         </title>
         <title py:otherwise="">
             <!--! Le l_ permet ici de réutiliser les traductions. -->
-            ${"VigiBoard - "}${l_('Events table')}
+            ${"VigiBoard - "}${_('Events table')}
         </title>
     </py:choose>
 </head>
@@ -61,7 +61,7 @@
                             </a>
 
                             <a py:otherwise=""
-                                href="${tg.url('/', sort=sort, order=order, params=fixed_search, page=page.previous_page)}">
+                                href="${tg.url('/', params=dict(fixed_search, sort=sort, order=order,page=page.previous_page))}">
                                 <img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/>
                              </a>
                         </py:choose>
@@ -80,7 +80,7 @@
                              </a>
 
                              <a py:otherwise=""
-                                href="${tg.url('/', sort=sort, order=order, params=fixed_search, page=page.next_page)}">
+                                href="${tg.url('/', params=dict(fixed_search, sort=sort, order=order, page=page.next_page))}">
                                 <img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
                         </py:choose>
@@ -88,13 +88,13 @@
 
                     <py:choose>
                         <div py:when="hostname and servicename" class="table_title">
-                            <span>${l_('Events table for service "%(servicename)s" on "%(hostname)s"') % {
+                            <span>${_('Events table for service "%(servicename)s" on "%(hostname)s"') % {
                                 'hostname': hostname,
                                 'servicename': servicename,
                             }}</span>
                         </div>
                         <div py:when="hostname" class="table_title">
-                            <span>${l_('Events table for host "%s"') % hostname}</span>
+                            <span>${_('Events table for host "%s"') % hostname}</span>
                         </div>
                         <div py:otherwise="" class="table_title">
                             <span>Events table</span>
@@ -127,7 +127,7 @@
                              </a>
 
                             <a py:otherwise=""
-                                href="${tg.url('/', sort=sort, order=order, params=fixed_search, page=page.previous_page)}">
+                                href="${tg.url('/', params=dict(fixed_search, sort=sort, order=order, page=page.previous_page))}">
                                 <img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/>
                             </a>
                         </py:choose>
@@ -146,7 +146,7 @@
                              </a>
 
                             <a py:otherwise=""
-                                href="${tg.url('/', sort=sort, order=order, params=fixed_search, page=page.next_page)}">
+                                href="${tg.url('/', params=dict(fixed_search, sort=sort, order=order, page=page.next_page))}">
                                 <img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
                         </py:choose>
@@ -154,7 +154,7 @@
 
                     <div class="${page.item_count and 'pagination' or 'line_pagination'}">
                         <span>
-                            ${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % {
+                            ${_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % {
                                 'id_first_row': page.first_item or 0,
                                 'id_last_row': page.last_item or 0,
                                 'total_rows': page.item_count,
