--- a/src/vigilo/themes/templates/vigiboard/plugins/state.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/state.html
@@ -3,7 +3,7 @@
       py:strip="">
 
 <th id="plugin_${name}" class="plugin_${name}" py:def="state_header(name, instance, sort, order)">
-    ${generic_plugin_header(name, name, l_('State'), l_('State'))}
+    ${generic_plugin_header(name, name, _('State'), _('State'))}
 </th>
 
 <py:def function="state_data(name, instance, data, plugin_data)">
