--- a/src/vigilo/themes/templates/vigimap/legend.html
+++ b/src/vigilo/themes/templates/vigimap/legend.html
@@ -1,23 +1,23 @@
 <div xmlns:py="http://genshi.edgewall.org/">
-    <h2>${l_("Legend")}</h2>
+    <h2>${_("Legend")}</h2>
     <div id="legend-elements">
         <!--!
             Le span sera complété avec le nombre total
             d'éléments (entre parenthèses).
         -->
-        <h3>${l_("Elements")} <span></span></h3>
+        <h3>${_("Elements")} <span></span></h3>
         <dl>
             <dt><span class="status-icon-unknown"></span><span class="status-unknown">&#160;</span></dt>
-            <dd><span class="legend-unknown"></span>${l_("Unknown")}</dd>
+            <dd><span class="legend-unknown"></span>${_("Unknown")}</dd>
 
             <dt><span class="status-icon-ok"></span><span class="status-ok">&#160;</span></dt>
-            <dd><span class="legend-ok"></span>${l_("OK")}</dd>
+            <dd><span class="legend-ok"></span>${_("OK")}</dd>
 
             <dt><span class="status-icon-warning"></span><span class="status-warning">&#160;</span></dt>
-            <dd><span class="legend-warning"></span>${l_("Warning")}</dd>
+            <dd><span class="legend-warning"></span>${_("Warning")}</dd>
 
             <dt><span class="status-icon-critical"></span><span class="status-critical">&#160;</span></dt>
-            <dd><span class="legend-critical"></span>${l_("Critical")}</dd>
+            <dd><span class="legend-critical"></span>${_("Critical")}</dd>
         </dl>
     </div>
     <div id="legend-links" py:if="has_link">
@@ -25,7 +25,7 @@
             Le span sera complété avec le nombre total
             d'éléments (entre parenthèses).
         -->
-        <h3>${l_("Links")} <span></span></h3>
+        <h3>${_("Links")} <span></span></h3>
         <dl>
             <div py:for="i, link in enumerate(links)" py:strip="True">
                 <div py:choose="" py:strip="True">
