[#1642] Affichage d'un graphe depuis VigiMap
Change-Id: Ida0e06db94d267bfa19b02d9bd07c9715a5c022a
Refs: #1642

--- a/src/vigilo/themes/templates/vigigraph/fullhostpage.html
+++ b/src/vigilo/themes/templates/vigigraph/fullhostpage.html
@@ -50,7 +50,7 @@
                         'left': 0,
                     })[prefix:]
                 })[prefix+2:]">
-            <a href="${tg.url('/#graphs[0]=%s&amp;safety=1' % graph_url)}">
+            <a href="${tg.url('/#graphs=%s&amp;safety=1' % graph_url)}">
             <img alt="${l_('Graph \'%(graph)s\' on \'%(host)s\'') % {
                     'host': host,
                     'graph': graph.name,
