--- a/src/vigilo/themes/templates/vigiadmin/master.html
+++ b/src/vigilo/themes/templates/vigiadmin/master.html
@@ -33,7 +33,7 @@
 <!--! La maintenance planifiée est désactivée tant que certains problèmes n'auront pas été résolus. -->
 <!--!    <li py:if="request.identity" id="downtimebtn" class="${('', 'active')[defined('page') and page==page=='downtime']}"><a href="${tg.url('/downtime')}">Downtime</a></li>-->
 
-    <li id="userinfo" py:if="request.identity">Logged in as: <span>${request.identity['user'].fullname} (${request.identity['repoze.who.userid']})</span></li>
+    <li id="userinfo" py:if="request.identity">Logged in as: <span>${request.identity['fullname']} (${request.identity['repoze.who.userid']})</span></li>
   </ul>
   <div id="content">
     <py:with vars="flash=tg.flash_obj.render('flash', use_js=False)">
