[#1646] Correction génération liens vers graphes
TurboGears utilise désormais le bon encodage des espaces dans les
paramètres (ie. '+' et pas '%20').
Ça nous pose problème car le "+" est ensuite ré-encodé lors du 2è
appel à tg.url().

Change-Id: I4c22aaaf0f962a771b8196a1d416cac829b0678f
Refs: #1646

--- a/src/vigilo/themes/templates/vigigraph/fullhostpage.html
+++ b/src/vigilo/themes/templates/vigigraph/fullhostpage.html
@@ -31,6 +31,9 @@
                 automatiquement ce graphe dans VigiGraph.
                 Pour cela, on crée d'abord l'URL normale avec tg.url(),
                 puis on supprime le chemin d'accès jusqu'à la page.
+                On change au passage l'encodage des espaces ('+' -> '%20')
+                puisque les paramètres de graphe sont dans le fragment
+                et pas dans le chemin de l'URL.
                 Ensuite, on fait de nouveau appel à tg.url() pour encoder
                 correctement l'URL de nouveau (on ne peut pas utiliser
                 urllib ici) et on supprime de nouveau le préfixe,
@@ -48,7 +51,7 @@
                         'duration': duration,
                         'top': 0,
                         'left': 0,
-                    })[prefix:]
+                    })[prefix:].replace('+', '%20')
                 })[prefix+2:]">
             <a href="${tg.url('/#graphs=%s&amp;safety=1' % graph_url)}">
             <img alt="${_('Graph \'%(graph)s\' on \'%(host)s\'') % {
