--- a/src/vigilo/themes/templates/common/admin/get_all.html
+++ b/src/vigilo/themes/templates/common/admin/get_all.html
@@ -26,8 +26,8 @@
                     <option py:otherwise="" value="${field}" selected="selected">${name}</option>
                   </py:for>
                 </select>
-                <input id="crud_search_value" name="${current_search[0]}" type="text" placeholder="equals / contains" value="${current_search[1]}" />
-                <input type="submit" value="Search"/>
+                <input id="crud_search_value" name="${current_search[0]}" type="text" placeholder="${_('equals / contains')}" value="${current_search[1]}" />
+                <input type="submit" value="${_('Search')}"/>
             </form>
         </div>
       </div>
