[#1707] Icône de tri sur "État" trop grande
L'icône de tri sur la colonne "État" est beaucoup plus grande que pour
les autres colonnes. Ce commit uniformise l'apparence vis-à-vis des
autres colonnes.

Change-Id: Ic0f0f08f87c18d77fae688542352b47da6ebfb73
Refs: #1707.

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -401,12 +401,7 @@ div.clearingdiv {
     padding: 10px;
 }
 
-.plugin_details img {
-    width: 2em;
-    height: 2em;
-}
-
-.plugin_details img {
+td.plugin_details img {
     width: 1.5em;
     height: 1.5em;
 }
